<resources>
    <string name="app_name">PingPhone</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_screen_select">ScreenSelect</string>

    <string name="title">ping\nphone</string>

    <string name="standby_info">ボタンを押してください\nおつなぎします</string>
    <string name="watch">hh:mm</string>
    <string name="date">yyyy/mm/dd</string>
    <string name="config_button">設定</string>

    <string name="info_title">ピンフォンの使い方</string>
    <string name="info_order">
        ピンフォンをインストールいただき
        \nありがとうございます。
        \n
        \n事前準備
        \n1.スカイプをインストールします。
        \n2.スカイプの設定をします。
        \n
        \nピンフォンの設定
        \n1.設定画面を開くためのパスワードを設定します。
        \n2.通話先のスカイプ名を設定します。
        \n3.端末にスピーカーをつなげてお使いください。
    </string>
    <string name="info_button">設定する</string>

    <string name="skype_setting">Skype名の設定</string>
    <string name="skype_setting_info">通話先のSkype名を入力してください</string>
    <string name="skype_setting_default">現在の通話先</string>
    <string name="id_text">Skype名</string>
    <string name="id_set">登録</string>
    <string name="title_activity_skype_setting">SkypeSetting</string>

    <string name="skype_button">CALL</string>
    <string name="title_activity_standby">Standby</string>

    <string name="menu_skype">スカイプ名\nの設定</string>
    <string name="menu_history">履歴</string>
    <string name="menu_password">パスワード</string>
    <string name="title_activity_password_setting">PasswordSetting</string>

    <string name="password_setting">パスワードの設定</string>
    <string name="password_setting_info">新しいパスワードを設定してください</string>
    <string name="pass_before">前のパスワード</string>
    <string name="pass_after">新しいパスワード</string>
    <string name="pass_set">登録</string>
    <string name="pass_skip">スキップ</string>

    <string name="tel_setting">パスワード送信先の設定</string>
    <string name="tel_setting_info">パスワードを忘れた時の\n送信先メールアドレスを設定してください</string>
    <string name="tel_before">前のメールアドレス</string>
    <string name="tel_after">新しいメールアドレス</string>
    <string name="tel_set">登録</string>

    <string name="warning_null">4桁の数字を入力してください</string>
    <string name="warning_passEquals">パスワードが違います</string>
    <string name="warning_equals">違うパスワードを設定してください</string>
    <string name="pass_change">変更しました</string>

    <string name="menu_password_setting">パスワード関連設定</string>
    <string name="password_setting_change">パスワードの設定</string>
    <string name="mail_setting">パスワード送信先の設定</string>

    <string name="title_activity_debug">Debug</string>
    <string name="title_activity_history">History</string>
    <string name="title_activity_settings_menu">SettingsMenu</string>
    <string name="title_activity_mail_setting">MailSetting</string>
    <string name="title_activity_password_menu">PasswordMenu</string>
    <string name="title_activity_info">Info</string>

</resources>
