<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context="com.redandborder.pingphone.SkypeSetting"
                android:background="#00cc82">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:text="@string/password_setting"
        android:textSize="30sp"
        android:background="#00cc82"
        android:textColor="#FFFFFF"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:text="@string/password_setting_info"
        android:textSize="20sp"
        android:background="#00cc82"
        android:textColor="#FFFFFF"/>

    <TextView
        android:id="@+id/tv_pass_before"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="50dp"
        android:text="@string/pass_before"
        android:background="#00cc82"
        android:textColor="#FFFFFF"/>

    <EditText
        android:id="@+id/pass_before"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:gravity="bottom|center"
        android:inputType="numberPassword|number"
        android:maxLength="4"
        android:textSize="20dp"
        android:background="#FFFFFF"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="50dp"
        android:text="@string/pass_after"
        android:background="#00cc82"
        android:textColor="#FFFFFF"/>

    <EditText
        android:id="@+id/pass_after"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:gravity="bottom|center"
        android:inputType="numberPassword|number"
        android:maxLength="4"
        android:textSize="20dp"
        android:background="#FFFFFF"/>

    <Button
        android:id="@+id/pass_set_button"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:text="@string/pass_set"
        android:textSize="20dp"
        android:background="#00cc82"
        android:textColor="#FFFFFF"/>


</LinearLayout>
