<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/standby_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#009cff"
                tools:context=".Standby">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/standby_info"
        android:textSize="25sp"
        android:textColor="#FFFFFF"
        android:background="#009cff"/>

    <Button
        android:id="@+id/skype_button"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_centerInParent="true"
        android:background="@drawable/button_up"
        android:text="@string/skype_button"
        android:textSize="50dp"
        android:textColor="#FFFFFF"/>

    <TextView
        android:id="@+id/standby_watch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="60dp"
        android:text="@string/watch"
        android:textSize="60dp"
        android:textColor="#FFFFFF"
        android:background="#009cff"/>

    <TextView
        android:id="@+id/standby_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:text="@string/date"
        android:textSize="20dp"
        android:textColor="#FFFFFF"
        android:background="#009cff"/>



    <Button
        android:id="@+id/settingsMenuButton"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:background="@mipmap/btn_settings"/>

</RelativeLayout>

