<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context="com.redandborder.pingphone.SettingsMenu"
                android:background="#00cc82">

    <Button
        android:id="@+id/menu_history"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/menu_history"
        android:textSize="20dp"
        android:textColor="#FFFFFF"
        android:background="@drawable/btn_menu"/>

    <Button
        android:id="@+id/menu_skype"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerInParent="true"
        android:text="@string/menu_skype"
        android:textSize="20dp"
        android:textColor="#FFFFFF"
        android:background="@drawable/btn_menu"/>

    <Button
        android:id="@+id/menu_passward"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:text="@string/menu_password"
        android:textSize="20dp"
        android:textColor="#FFFFFF"
        android:background="@drawable/btn_menu"/>


</RelativeLayout>
