<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context="com.redandborder.pingphone.SkypeSetting"
              android:background="#00cc82">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:textSize="30sp"
        android:text="@string/skype_setting"
        android:background="#00cc82"
        android:textColor="#FFFFFF"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:textSize="20sp"
        android:text="@string/skype_setting_info"
        android:background="#00cc82"
        android:textColor="#FFFFFF"/>

    <TextView
        android:id="@+id/tv_skype_default"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:textSize="20sp"
        android:text="@string/skype_setting_default"
        android:background="#00cc82"
        android:textColor="#FFFFFF"/>

    <TextView
        android:id="@+id/skype_default"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:background="#00cc82"
        android:textColor="#FFFFFF"/>

    <EditText
        android:id="@+id/id_text"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:gravity="bottom|center"
        android:layout_marginTop="50dp"
        android:textSize="30dp"
        android:inputType="text"
        android:background="#FFFFFF"/>

    <Button
        android:id="@+id/skype_set"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:textSize="20dp"
        android:text="@string/id_set"
        android:background="#00cc82"
        android:textColor="#FFFFFF"/>

</LinearLayout>
